Test LocRotScale Armature animations

--- a/wc3ToMaya.csproj
+++ b/wc3ToMaya.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animates\Animator.cs" />
+    <Compile Include="Animates\Extensions.cs" />
+    <Compile Include="Animates\timeEditorMEL.cs" />
     <Compile Include="ExtContent\BlpCLIConverter.cs" />
     <Compile Include="ExtContent\AssetsDir.cs" />
     <Compile Include="Translator.cs" />
