--- a/wc3ToMaya.csproj
+++ b/wc3ToMaya.csproj
@@ -54,9 +54,9 @@
     <Compile Include="ExtContent\BlpCLIConverter.cs" />
     <Compile Include="ExtContent\AssetsDir.cs" />
     <Compile Include="Translator.cs" />
-    <Compile Include="CreateMesh.cs" />
-    <Compile Include="CreateRig.cs" />
-    <Compile Include="Extensions.cs" />
+    <Compile Include="Base\CreateMesh.cs" />
+    <Compile Include="Base\CreateRig.cs" />
+    <Compile Include="Base\Extensions.cs" />
     <Compile Include="Rendering\Extensions.cs" />
     <Compile Include="Rendering\Materials.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
